--- a/PicoFirst/index.html
+++ b/PicoFirst/index.html
@@ -13,12 +13,12 @@
 
         <section class="about">
             <div class="grid_6">
-                <p>The pico first grid is a micro css grid. No base style. No resets. No framework. No defined breakpoints. Just a grid. </p>
+                <p>The pico first grid is a micro css grid. No base style. No resets. No framework. No defined breakpoints. No BS. Just a grid. </p>
 
                 <p>
-                    The grid is simple and gives you the designer more control of your pages. All columns start at 100% single 
+                    The grid is simple and gives you the designer more control of your pages. All 12 columns start at 100% single 
                     column design for mobile. As you have more space on you page you turn your grid on and off
-                    with min-width media queries. 
+                    with min-width media queries.
                 </p>
 
 
