--- a/PicoFirst/index.html
+++ b/PicoFirst/index.html
@@ -12,7 +12,7 @@
         <h2>A Mobile First, Content Defined Micro Grid</h2>
 
         <section class="about">
-            <div class="grid_6">
+            <div class="col_6">
                 <p>The pico first grid is a micro css grid. No base style. No resets. No framework. No defined breakpoints. No bs. Just a grid. </p>
 
                 <p>
@@ -22,7 +22,7 @@
                 </p>
             </div>
 
-            <div class="grid_6 omega">
+            <div class="col_6 omega">
                 <p>
                     The column widths are defined in a comment for reference. It is up to you to simply add the widths in your media queries.
                     This give you the control to turn the grid off and on based on your content and not device based breakpoints.
@@ -35,19 +35,19 @@
 
 
         <section class="code">
-            <div class="grid_6">
+            <div class="col_6">
                 <h2>HTML</h2>
                 <pre class="code">
                     <code>
 &ltsection class="demo"&gt
         &lth2&gtExample 2 col&lt/h2&gt
-        &ltdiv class="grid_6"&gt
+        &ltdiv class="col_6"&gt
             &ltp&gt
             Lorem ipsum dolor sit amet, 
             consectetur adipisicing elit.   
             &lt/p&gt
         &lt/div&gt
-        &ltdiv class="grid_6 omega"&gt
+        &ltdiv class="col_6 omega"&gt
             &ltp&gt
             Lorem ipsum dolor sit amet, 
             consectetur adipisicing elit.   
@@ -57,12 +57,12 @@
                     </code>
                 </pre>
             </div>
-            <div class="grid_6 omega">
+            <div class="col_6 omega">
                 <h2>CSS</h2>
                 <pre class="code">
                     <code>
 @media screen and (min-width: 25em) {
-    .demo .grid_6 {
+    .demo .col_6 {
         width: 49%;
     }
 }
@@ -72,12 +72,12 @@
         </section>
 
         <section class="demo">
-            <div class="grid_12">
+            <div class="col_12">
                 <h2>Example 2 col</h2>
-                <div class="grid_6">
+                <div class="col_6">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non   proident, sunt in culpa qui officia deserunt  mollit anim id est laborum.Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 </div>
-                <div class="grid_6 omega">
+                <div class="col_6 omega">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non   proident, sunt in culpa qui officia deserunt  mollit anim id est laborum.Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 </div>
             </div>
@@ -88,31 +88,31 @@
             <pre>
                     <code>
 /*! GRID CONSTANTS
-.grid_1 { width: 6.5%; } 
-.grid_2 { width: 15%; } 
-.grid_3 { width: 23.5%; } 
-.grid_4 { width: 32%; } 
-.grid_5 { width: 40.5%; } 
-.grid_6 { width: 49%; } 
-.grid_7 { width: 57.5%; }
-.grid_8 { width: 66%; } 
-.grid_9 { width: 74.5%; } 
-.grid_10 { width: 83%; } 
-.grid_11 { width: 91.5%; } 
-.grid_12 { width: 100%; } */ 
+.col_1 { width: 6.5%; } 
+.col_2 { width: 15%; } 
+.col_3 { width: 23.5%; } 
+.col_4 { width: 32%; } 
+.col_5 { width: 40.5%; } 
+.col_6 { width: 49%; } 
+.col_7 { width: 57.5%; }
+.col_8 { width: 66%; } 
+.col_9 { width: 74.5%; } 
+.col_10 { width: 83%; } 
+.col_11 { width: 91.5%; } 
+.col_12 { width: 100%; } */ 
 
-.grid_1,
-.grid_2,
-.grid_3,
-.grid_4,
-.grid_5,
-.grid_6,
-.grid_7,
-.grid_8,
-.grid_9,
-.grid_10,
-.grid_11,
-.grid_12 {
+.col_1,
+.col_2,
+.col_3,
+.col_4,
+.col_5,
+.col_6,
+.col_7,
+.col_8,
+.col_9,
+.col_10,
+.col_11,
+.col_12 {
     width:100%;
 	margin: 0 2% 1% 0;
 	float: left;
