--- a/demo.html
+++ b/demo.html
@@ -2,8 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>PicoFirst</title>
-    <link href="Resources/PicoFirstGrid.css" rel="stylesheet" />
-    <link href="Resources/demo.css" rel="stylesheet" />
+    <link href="PicoFirst/Resources/PicoFirstGrid.css" rel="stylesheet" />
+    <link href="PicoFirst/Resources/demo.css" rel="stylesheet" />
 </head>
 <body>
     <h1>Pico Mobile First mini grid</h1>
