--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>PicoFirst</title>
-    <link href="Resources/normalize.css" rel="stylesheet" />
-    <link href="Resources/PicoFirstGrid.css" rel="stylesheet" />
-    <link href="Resources/index.css" rel="stylesheet" />
+    <link href="PicoFirst/Resources/normalize.css" rel="stylesheet" />
+    <link href="PicoFirst/Resources/PicoFirstGrid.css" rel="stylesheet" />
+    <link href="PicoFirst/Resources/index.css" rel="stylesheet" />
 </head>
 <body>
     <h1>Pico First</h1>
