--- a/demo.html
+++ b/demo.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>PicoFirst</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="PicoFirst/Resources/PicoFirstGrid.css" rel="stylesheet" />
     <link href="PicoFirst/Resources/demo.css" rel="stylesheet" />
 </head>
