--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <title>CSS Dual Grid</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-    <link href="/normalize.css" rel="stylesheet" />
-    <link href="/DualGrid.css" rel="stylesheet" />
-    <link href="/index.css" rel="stylesheet" />
+    <link href="normalize.css" rel="stylesheet" />
+    <link href="DualGrid.css" rel="stylesheet" />
+    <link href="index.css" rel="stylesheet" />
 </head>
 <body>
     <header>
